--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-		<h1>Giorgia il mio amore <3 </h1>
+		<h1>Giorgia il mio amore</h1>
 	</header>
 	<main>
 		<button id="clicca">Clicca qui</button>
